Added sign0up for virtual workshop form and edits
Small edits

--- a/conference.html
+++ b/conference.html
@@ -65,11 +65,12 @@
               <h2>Welcome Social Changemakers! </h2>
 							<p>We are so excited to come together March 4-5, 2022. If you have any questions or issues accessing the sessions email info@oneia.ca or text 416-669-2051. The event will be held on zoom. Links for the sessions will be emailed to attendees 24 hours in advance. ASL and live transcription in English and French will be provided.</p>
 
-							<p>Optional networking with games, an escape room and scavenger hunt will take place after both sessions and for one hour befor on Mar. 5th on <a href="https://app.gather.town/app">gather.town</a>. Link to the space will be sent 24 hours in advance, but will only be open at certain times.</p>
+							<p>Optional networking with games, an escape room and scavenger hunt will take place after both sessions and for one hour befor on Mar. 5th on <a href="https://app.gather.town/app" target="_blank">gather.town</a>. Link to the space will be sent 24 hours in advance, but will only be open at certain times.</p>
 							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details at the bottom of this page for to set this up.</p>
--
+
+<p><a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend the optional ASL Basics Workshop on Saturday or Mohawk Residential School Virtual Tour on Sunday here!</a></p>
+
               <h2>Social Changemakers Conference Schedule </h2>
-              <p> The Social Changemakers Conference Series will be delivered completely online to avoid any financial, geographic, medical, or accessibility barriers that participants may face. The Emerging Leaders (ages 18-24) will design the contents of the conference, but the general topics include how to progress diversity, equity, and inclusion in communities.  The Youth Conference portion will bring together student teams (aged 14-18) to learn how to identify issues and take actions to create positive change in their schools and communities.</p>
 
 <h4>Friday, March 4</h4>
 <table>
@@ -78,8 +79,8 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>Fri, Mar 4<br>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
-		<td>Welcome and Kick-off with Guest Speaker Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/">Reid My Mind<br>
+		<td>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Welcome and Kick-off with Guest Speaker Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/" target="_blank">Reid My Mind</a><br>
 		<li>How to go beyond fundraising and make impactful change</li></td>
 	</tr>
 	<tr>
@@ -100,16 +101,17 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>Sat, Mar 5<br>8:30 PST <br>11:30 EST <br>12:30 AST<br>1:00 NST</td>
-		<td>Optional: ASL Basics Workshop (one hour session)</td>
+		<td>8:30 PST <br>11:30 EST <br>12:30 AST<br>1:00 NST</td>
+		<td>Optional: ASL Basics Workshop (one hour session)<br>
+		<a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend.</a></td>
 	</tr>
 	<tr>
 		<td>9:00 PST <br>12:00 EST <br>1:00 AST<br>1:30 NST</td>
-		<td>Optional: Netwrking and games on gather.town</td>
+		<td>Optional: Networking and games on gather.town</td>
 	</tr>
 	<tr>
 		<td>10:00 PST<br>1:00 EST<br>2:00 AST <br>2:30 NST</td>
-		<td>Introduction for the Day and Guest Speaker Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/">Moose Hide Campaign</a><br>
+		<td>Day 2 Kick-off and Guest Speaker Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/" target="_blank">Moose Hide Campaign</a><br>
 		<li>How to go beyond allyship to solidarity</li></td>
 	</tr>
 	<tr>
@@ -128,7 +130,8 @@
 </tr>
 <tr>
 	<td>12:45 PST<br>3:45 EST<br>4:45 AST <br>5:15 NST</td>
-	<td>Optional networking and games on gather.town - room will stay open for one hour</td>
+	<td>Optional: Networking and games on gather.town<rb>
+		<em>Platform will stay open for one hour after the conference wraps up</em></td>
 </tr>
 </table>
 
@@ -139,12 +142,13 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>Sun. Mar. 6<br>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
-		<td>Optional:<a href="https://woodlandculturalcentre.ca/mohawk-institute-residential-school-virtual-tour-now-available-online/"> Virtual Tour of the Mohawk Residential School</a><br><em>Please note content in this workshop may be triggering for some participants.</em></td>
+		<td>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Optional:<a href="https://woodlandculturalcentre.ca/mohawk-institute-residential-school-virtual-tour-now-available-online/" target="_blank"> Virtual Tour of the Mohawk Residential School</a><br><em>Please note content in this workshop may be triggering for some participants.</em>
+		<br><a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend.</a></td>
 	</tr>
 </table>
 
-<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">See a pdf version of the schedule.</a></p>
+<a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" target="_blank">See a pdf version of the schedule.</a></p>
 <p>Note that there will be another optional virtual workshop on 2SLGBTQ+ youth and poverty held at a future date in March. Details will be emailed once available.</p>
 
 <h3>Follow-up</h3>
