--- a/conference.html
+++ b/conference.html
@@ -66,7 +66,7 @@
 							<p>We are so excited to come together March 4-5, 2022. If you have any questions or issues accessing the sessions email info@oneia.ca or text 416-669-2051. The event will be held on zoom. Links for the sessions will be emailed to attendees 24 hours in advance. ASL and live transcription in English and French will be provided.</p>
 
 							<p>Optional networking with games, an escape room and scavenger hunt will take place after both sessions and for one hour befor on Mar. 5th on <a href="https://app.gather.town/app" target="_blank">gather.town</a>. Link to the space will be sent 24 hours in advance, but will only be open at certain times.</p>
-							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details at the bottom of this page for to set this up.</p>
+							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details at the bottom of this page to get this set up.</p>
 
 <p><a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend the optional ASL Basics Workshop on Saturday or Mohawk Residential School Virtual Tour on Sunday here!</a></p>
 
@@ -79,17 +79,17 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>3:00 PST<br>4:00 MST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
 		<td>Welcome and Kick-off with Guest Speaker Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/" target="_blank">Reid My Mind</a><br>
 		<li>How to go beyond fundraising and make impactful change</li></td>
 	</tr>
 	<tr>
-		<td>4:00 PST<br>7:00 EST<br> 8:00 AST <br> 8:30 NST</td>
+		<td>4:00 PST<br>5:00 MST <br>7:00 EST<br> 8:00 AST <br> 8:30 NST</td>
 		<td>Small Group Breakouts - change zoom rooms<br>
 			<li>Challenging your own bias</li></td>
 	</tr>
 	<tr>
-		<td>5:00 PST<br>8:00 EST<br>9:00 AST<br>9:30 NST</td>
+		<td>5:00 PST<br>6:00 MST<br>8:00 EST<br>9:00 AST<br>9:30 NST</td>
 		<td>Optional: Networking and Games on gather.town</td>
 	</tr>
 </table>
@@ -101,7 +101,7 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>8:30 PST <br>11:30 EST <br>12:30 AST<br>1:00 NST</td>
+		<td>8:30 PST<br>9:30 MST<br>11:30 EST <br>12:30 AST<br>1:00 NST</td>
 		<td>Optional: ASL Basics Workshop (one hour session)<br>
 		<a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend.</a></td>
 	</tr>
@@ -110,26 +110,26 @@
 		<td>Optional: Networking and games on gather.town</td>
 	</tr>
 	<tr>
-		<td>10:00 PST<br>1:00 EST<br>2:00 AST <br>2:30 NST</td>
+		<td>10:00 PST<br>11:00 MST <br>1:00 EST<br>2:00 AST <br>2:30 NST</td>
 		<td>Day 2 Kick-off and Guest Speaker Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/" target="_blank">Moose Hide Campaign</a><br>
 		<li>How to go beyond allyship to solidarity</li></td>
 	</tr>
 	<tr>
-	<td>10:40 PST<br>1:40 EST<br>2:40 AST <br>1:10 NST</td>
+	<td>10:40 PST<br>11:40 MST<br>1:40 EST<br>2:40 AST <br>1:10 NST</td>
 	<td>Small Group Breakouts - same zoom link as previous day
 		<li>How to use your story to make social change</li>
 				<li>How to have courageous conversations</li></td>
 </tr>
 <tr>
-	<td>12:00 PST<br>3:00 EST<br>4:00 AST <br>4:30 NST</td>
+	<td>12:00 PST<br>1:00 MST<br>3:00 EST<br>4:00 AST <br>4:30 NST</td>
 	<td>Break - Yoga and meditation in main room</td>
 </tr>
 <tr>
-	<td>12:15 PST<br>3:15 EST<br>4:15 AST <br>4:45 NST</td>
+	<td>12:15 PST<br>1:15 MST <br>3:15 EST<br>4:15 AST <br>4:45 NST</td>
 	<td>Conference Closing, Special Performance & Prizes</td>
 </tr>
 <tr>
-	<td>12:45 PST<br>3:45 EST<br>4:45 AST <br>5:15 NST</td>
+	<td>12:45 PST<br>1:45 MST<br>3:45 EST<br>4:45 AST <br>5:15 NST</td>
 	<td>Optional: Networking and games on gather.town<rb>
 		<em>Platform will stay open for one hour after the conference wraps up</em></td>
 </tr>
@@ -142,14 +142,14 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>3:00 PST <br>4:00 MST<br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
 		<td>Optional:<a href="https://woodlandculturalcentre.ca/mohawk-institute-residential-school-virtual-tour-now-available-online/" target="_blank"> Virtual Tour of the Mohawk Residential School</a><br><em>Please note content in this workshop may be triggering for some participants.</em>
 		<br><a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend.</a></td>
 	</tr>
 </table>
 
 <a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" target="_blank">See a pdf version of the schedule.</a></p>
-<p>Note that there will be another optional virtual workshop on 2SLGBTQ+ youth and poverty held at a future date in March. Details will be emailed once available.</p>
+<p>Note that there will be another optional virtual tour of the Canadian Human Rights Museum on March 24th - timing TBC.</p>
 
 <h3>Follow-up</h3>
 <p>After the conference we will send weekly emails taking the youth and student teams through the 3Rs of Social Change. Each week you will receive an email with icebreakers, a video to watch and additional resources to support you in planning and delivering an initiative addressing an issue you see in your school or community.</p>
@@ -162,7 +162,7 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>Fri, Mar 25<br>3:00 PST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>Fri, Mar 25<br>3:00 PST<br>4:00 MST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
 		<td>Celebration & Wrap-Up with Special Performance<br>
 			<li>Next steps: How to keep pushing without burning out</li></td>
 	</tr>
@@ -170,7 +170,7 @@
 
 							<h3>Setting up captions in gather.town.</h3>
 							<p>The latest Chrome update now natively supports live captioning of audio streams, which WebRTC connects to automatically, so you can have live captioning for other people's audio in Gather! In the top right of your Chrome navigation menu, click the three lines next to the musical note. A pop-up window shows the name of the site. At the bottom of the pop-up, a toggle switch can be turned on to enable Live Captioning (in English only).</p>
-							<a href="" class="image"><img src="images/livecaptions_gather_town.png" alt=Screen Capture of Gather.town></a>
+							<a href="" class="image"><img src="images/livecaptions_gather_town.png" alt="Screen Capture of Gather.town" data-position="center center" width="100%"></a>
 
 <h3>For more information</h3>
 <p>Email info@harmony.ca, call or text 416-669-2051.</p>
