--- a/resources.html
+++ b/resources.html
@@ -54,6 +54,7 @@
 								<li><a href="#three">Storytelling Resources</a></li>
 								<li><a href="#four">Action Planning Resources</a></li>
 								<li><a href="#five">Action Planning Templates</a></li>
+								<li><a href="#six">Mental Health Resources</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -68,6 +69,45 @@
 								<div class="content">
 									<div class="inner">
 										<h2>Coming soon!</h2>
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- Six -->
+						<section id="six" class="wrapper style1 fade-up">
+							<div class="inner">
+								<div class="content">
+									<div class="inner">
+										<h2>Mental Health Resources</h2>
+										<p>Click the link below to access a list of free mental health resources and supports for youth:</p>
+										<p><a href="https://docs.google.com/spreadsheets/d/1xhAr8a_NrC8d5jRotv63bRDuwlYS96DH/edit?usp=sharing&ouid=104837473357336081176&rtpof=true&sd=true" class="button">See the List of Supports</a></p>
+										<p><em>If any of the links is out of date or if you know of additional services that should be added to this list email us at info@harmony.ca.</p>
+										<h2>Self-Care Resources</h2>
+										<p>Engaging in self care is critical to doing any social change work. You need to take care of yourself so you can do this work in a sustainable way. We've curated a variety of tools and activities you
+											can use to plan and implment your own custom self-care practice.</p>
+											<table>
+												<tr>
+													<td><a href="https://drive.google.com/file/d/1A9iVufzowrk6hRsY1NQvEHRw6vhjvBJj/view?usp=sharing">Self-Care Assessment</a></td>
+													<td><a href="https://drive.google.com/file/d/1A9mpkYEKT5a7kAELggt727sCOTYGB4VJ/view?usp=sharing">Self-Care Planning Worksheet</a></td>
+													<td><a href="https://drive.google.com/file/d/1mVAqJ-4Vz5CR_mCNoAjPwD-_E2zGjYBs/view?usp=sharing">Ideas for Self-Care</a></td>
+												</tr>
+											</table>
+											<h4>Why Self-Care is Important While Doing Social Change Work</h4>
+											<video width="100%" autoplay muted controls>
+												<source src="https://youtu.be/aw_k_plx_CU" type="video/mp4">
+											Your browser does not support the video tag.
+											</video>
+											<h4>Teens Talk About Self-Care in High School</h4>
+											<video width="100%" autoplay muted controls>
+												<source src="https://youtu.be/gEHPTjMv4F0" type="video/mp4">
+											Your browser does not support the video tag.
+											</video>
+											<h4>the Mising Ingredient in Self Care</h4>
+											<video width="100%" autoplay muted controls>
+												<source src="https://youtu.be/Eupk56SG76M" type="video/mp4">
+											Your browser does not support the video tag.
+											</video>
 								</div>
 							</div>
 						</div>
