--- a/resources.html
+++ b/resources.html
@@ -81,33 +81,25 @@
 									<div class="inner">
 										<h2>Mental Health Resources</h2>
 										<p>Click the link below to access a list of free mental health resources and supports for youth:</p>
-										<p><a href="https://docs.google.com/spreadsheets/d/1xhAr8a_NrC8d5jRotv63bRDuwlYS96DH/edit?usp=sharing&ouid=104837473357336081176&rtpof=true&sd=true" class="button">See the List of Supports</a></p>
-										<p><em>If any of the links is out of date or if you know of additional services that should be added to this list email us at info@harmony.ca.</p>
-										<h2>Self-Care Resources</h2>
+										<p><a href="https://docs.google.com/spreadsheets/d/1xhAr8a_NrC8d5jRotv63bRDuwlYS96DH/edit?usp=sharing&ouid=104837473357336081176&rtpof=true&sd=true" target= _blank class="button">See the List of Supports</a></p>
+										<p><em>If any of the links is out of date or if you know of additional services that should be added to this list email us at info@harmony.ca.</em></p>
+										<h3>Self-Care Resources</h3>
 										<p>Engaging in self care is critical to doing any social change work. You need to take care of yourself so you can do this work in a sustainable way. We've curated a variety of tools and activities you
 											can use to plan and implment your own custom self-care practice.</p>
+											<h4>Self-Care Planning Worksheets & Acitvities</h4>
 											<table>
 												<tr>
-													<td><a href="https://drive.google.com/file/d/1A9iVufzowrk6hRsY1NQvEHRw6vhjvBJj/view?usp=sharing">Self-Care Assessment</a></td>
-													<td><a href="https://drive.google.com/file/d/1A9mpkYEKT5a7kAELggt727sCOTYGB4VJ/view?usp=sharing">Self-Care Planning Worksheet</a></td>
-													<td><a href="https://drive.google.com/file/d/1mVAqJ-4Vz5CR_mCNoAjPwD-_E2zGjYBs/view?usp=sharing">Ideas for Self-Care</a></td>
+													<td><a href="https://drive.google.com/file/d/1A9iVufzowrk6hRsY1NQvEHRw6vhjvBJj/view?usp=sharing" target= _blank>Self-Care Assessment</a></td>
+													<td><a href="https://drive.google.com/file/d/1A9mpkYEKT5a7kAELggt727sCOTYGB4VJ/view?usp=sharing" target= _blank>Self-Care Planning Worksheet</a></td>
+													<td><a href="https://drive.google.com/file/d/1mVAqJ-4Vz5CR_mCNoAjPwD-_E2zGjYBs/view?usp=sharing" target= _blank>Ideas for Self-Care</a></td>
 												</tr>
 											</table>
 											<h4>Why Self-Care is Important While Doing Social Change Work</h4>
-											<video width="100%" autoplay muted controls>
-												<source src="https://youtu.be/aw_k_plx_CU" type="video/mp4">
-											Your browser does not support the video tag.
-											</video>
+										<iframe width="1280" height="720" src="https://www.youtube.com/embed/aw_k_plx_CU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<h4>Teens Talk About Self-Care in High School</h4>
-											<video width="100%" autoplay muted controls>
-												<source src="https://youtu.be/gEHPTjMv4F0" type="video/mp4">
-											Your browser does not support the video tag.
-											</video>
-											<h4>the Mising Ingredient in Self Care</h4>
-											<video width="100%" autoplay muted controls>
-												<source src="https://youtu.be/Eupk56SG76M" type="video/mp4">
-											Your browser does not support the video tag.
-											</video>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/gEHPTjMv4F0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h4>The Missing Ingredient in Self-Care</h4>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/Eupk56SG76M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
