--- a/conference.html
+++ b/conference.html
@@ -80,8 +80,8 @@
 	</tr>
 	<tr>
 		<td>3:00 PST<br>4:00 MST <br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
-		<td>Welcome and Kick-off with Guest Speaker Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/" target="_blank">Reid My Mind</a><br>
-		<li>How to go beyond fundraising and make impactful change</li></td>
+		<td>Day 2 Kick-off and Guest Speaker Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/" target="_blank">Moose Hide Campaign</a><br>
+		<li>How to go beyond allyship to solidarity</li></td>
 	</tr>
 	<tr>
 		<td>4:00 PST<br>5:00 MST <br>7:00 EST<br> 8:00 AST <br> 8:30 NST</td>
@@ -103,7 +103,7 @@
 	<tr>
 		<td>8:30 PST<br>9:30 MST<br>11:30 EST <br>12:30 AST<br>1:00 NST</td>
 		<td>Optional: ASL Basics Workshop (one hour session)<br>
-		<a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend.</a></td>
+		<a href="https://forms.gle/TYG4wj8obtGBaki77" target="_blank">Sign up to attend.</a></td>
 	</tr>
 	<tr>
 		<td>9:00 PST <br>12:00 EST <br>1:00 AST<br>1:30 NST</td>
@@ -111,8 +111,9 @@
 	</tr>
 	<tr>
 		<td>10:00 PST<br>11:00 MST <br>1:00 EST<br>2:00 AST <br>2:30 NST</td>
-		<td>Day 2 Kick-off and Guest Speaker Sage Lacerte, Youth Ambassador for the <a href"https://moosehidecampaign.ca/" target="_blank">Moose Hide Campaign</a><br>
-		<li>How to go beyond allyship to solidarity</li></td>
+		<td>Welcome and Kick-off with Guest Speaker Thomas Reid, speaker and podcaster from <a href="http://reidmymind.com/" target="_blank">Reid My Mind</a><br>
+		<li>How to go beyond fundraising and make impactful change</li></td>
+
 	</tr>
 	<tr>
 	<td>10:40 PST<br>11:40 MST<br>1:40 EST<br>2:40 AST <br>1:10 NST</td>
@@ -130,7 +131,7 @@
 </tr>
 <tr>
 	<td>12:45 PST<br>1:45 MST<br>3:45 EST<br>4:45 AST <br>5:15 NST</td>
-	<td>Optional: Networking and games on gather.town<rb>
+	<td>Optional: Networking and games on gather.town<br>
 		<em>Platform will stay open for one hour after the conference wraps up</em></td>
 </tr>
 </table>
@@ -142,7 +143,7 @@
 		<th>Activity</th>
 	</tr>
 	<tr>
-		<td>3:00 PST <br>4:00 MST<br>6:00 EST <br>7:00 AST<br>7:30 NST</td>
+		<td>9:00 PST <br>10:00 MST<br>12:00 EST <br>1:00 AST<br>1:30 NST</td>
 		<td>Optional:<a href="https://woodlandculturalcentre.ca/mohawk-institute-residential-school-virtual-tour-now-available-online/" target="_blank"> Virtual Tour of the Mohawk Residential School</a><br><em>Please note content in this workshop may be triggering for some participants.</em>
 		<br><a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend.</a></td>
 	</tr>
