--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
 							<section>
 								<div class="content">
 									<div class="inner">
-										<h2>Social Changemakers Leadership Series</h2>
-										<p>We are recruiting 26 youth from across Canada aged 18-24 to participate in our Emerging Leaders
-											virtual conference series. We are currently accepting applications from passionate young leaders committed
-											to creating positive social change to participate in this multi-week intensive program running from January 9 to mid-March with the student conference portion taking place March 4-6, 2022</p>
-
-										<p>Emerging Leaders will deepen their knowledge of discrimination and anti-oppression, build their personal and
-											professional networks, and gain experience in facilitation, mentorship, and project management in a non-profit setting.</p>
+										<h2>Social Changemakers Network</h2>
+										<p>Join a community of passionate youth from across Canada who are committed to driving forward social change to create more just, caring and inclusive communities.</p>
+										<p>By joining the network you'll get access to experts on action planning and equity issues, unique learning opportunities, and promote your own work within a larger community of changemakers.</p>
 										<ul class="actions">
-											<li><a href="conference.html" class="button">Learn more</a></li>
+											<li><a href="clubs.html" class="button">Learn more</a></li>
 										</ul>
 									</div>
 								</div>
