Added action planning resources + conference
Slight update to conference section + added action planning resources section

--- a/conference.html
+++ b/conference.html
@@ -59,16 +59,10 @@
 							Your browser does not support the video tag.
 							</video>
 
-<p><a href="https://forms.gle/SQLeYu7FdpW59Sbp6" class="button">Apply As An Individual Youth</a></p>
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScQvC6kg7gIlMo7bD8HGpAA16wtynxX_R9KTAtptAb09tQ4dg/viewform?usp=sf_link" class="button">Apply As A Student Team</a></p>
-
-              <h2>Welcome Social Changemakers! </h2>
-							<p>We are so excited to come together March 4-5, 2022. If you have any questions or issues accessing the sessions email info@oneia.ca or text 416-669-2051. The event will be held on zoom. Links for the sessions will be emailed to attendees 24 hours in advance. ASL and live transcription in English and French will be provided.</p>
-
-							<p>Optional networking with games, an escape room and scavenger hunt will take place after both sessions and for one hour befor on Mar. 5th on <a href="https://app.gather.town/app" target="_blank">gather.town</a>. Link to the space will be sent 24 hours in advance, but will only be open at certain times.</p>
-							<p>If you would like to see captions on gather.town you will need to use Google Chrome, see more details at the bottom of this page to get this set up.</p>
-
-<p><a href="https://forms.gle/TYG4wj8obtGBaki77">Sign up to attend the optional ASL Basics Workshop on Saturday or Mohawk Residential School Virtual Tour on Sunday here!</a></p>
+              <h2>Thank you Social Changemakers! </h2>
+							<p>Thanks to everyone who registered and attended our conference March 4,5 and 21st, 2022.</p>
+							<p>Attendees and student groups will be provided with weekly supports and ideas to help your club take what you learned from the conference and deliver an action initiative in your school or community.</p>
+							<p>Share your amazing work with us! Email info@harmony.ca to share what you've done!</p>
 
               <h2>Social Changemakers Conference Schedule </h2>
 
@@ -150,7 +144,7 @@
 </table>
 
 <a href="https://www.canva.com/design/DAErJKSuepw/I2p7mF4qUMpXElutjdLI9Q/view?utm_content=DAErJKSuepw&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" target="_blank">See a pdf version of the schedule.</a></p>
-<p>Note that there will be another optional virtual tour of the Canadian Human Rights Museum on March 24th - timing TBC.</p>
+<p>Note that there will be another optional virtual tour of the Canadian Human Rights Museum on March 24th.</p>
 
 <h3>Follow-up</h3>
 <p>After the conference we will send weekly emails taking the youth and student teams through the 3Rs of Social Change. Each week you will receive an email with icebreakers, a video to watch and additional resources to support you in planning and delivering an initiative addressing an issue you see in your school or community.</p>
@@ -168,10 +162,6 @@
 			<li>Next steps: How to keep pushing without burning out</li></td>
 	</tr>
 </table>
-
-							<h3>Setting up captions in gather.town.</h3>
-							<p>The latest Chrome update now natively supports live captioning of audio streams, which WebRTC connects to automatically, so you can have live captioning for other people's audio in Gather! In the top right of your Chrome navigation menu, click the three lines next to the musical note. A pop-up window shows the name of the site. At the bottom of the pop-up, a toggle switch can be turned on to enable Live Captioning (in English only).</p>
-							<a href="" class="image"><img src="images/livecaptions_gather_town.png" alt="Screen Capture of Gather.town" data-position="center center" width="100%"></a>
 
 <h3>For more information</h3>
 <p>Email info@harmony.ca, call or text 416-669-2051.</p>
