--- a/resources.html
+++ b/resources.html
@@ -68,7 +68,29 @@
 							<div class="inner">
 								<div class="content">
 									<div class="inner">
-										<h2>Coming soon!</h2>
+										<h2>We are continuously working to expand our resources.</h2>
+										<p>Got a resource you think should be included? Or looking for something specific? Email info@harmony.ca.</p>
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- Five -->
+						<section id="five" class="wrapper style1 fade-up">
+							<div class="inner">
+								<div class="content">
+									<div class="inner">
+										<h4>Looking for more Action Planning resources and support? <a href="clubs.html">Join the Social Changemakers Network!</a></h4>
+											<table>
+												<tr>
+													<td><a href="https://drive.google.com/file/d/1edCsHR4LEqt1prPMB6Td_n5MWH5bu6je/view?usp=sharing" target= _blank>Social Changemakers Action Kit</a></td>
+													<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1LTJXNRt6NVR0afPtmyTcRK6yjg52qEU5zAdg2AJXFL0rQw/viewform?usp=sf_link" target= _blank>School Climate Survey</a></td>
+												</tr>
+												<tr>
+													<td><p>Download this free kit which includes info on setting up a club, strategy planning, communications, fundriasing, and sample initiatives to create social change.</p></td>
+													<td><p>This survey will help you identify issues around discrimination in your school. It can be filled in as individuals or as a group together. Email info@harmony.ca to request a report from all the participants who submit.</p></td>
+												</tr>
+											</table>
 								</div>
 							</div>
 						</div>
@@ -82,8 +104,6 @@
 										<h2>Mental Health Resources</h2>
 										<p>Click the link below to access a list of free mental health resources and supports for youth:</p>
 										<p><a href="https://docs.google.com/spreadsheets/d/1xhAr8a_NrC8d5jRotv63bRDuwlYS96DH/edit?usp=sharing&ouid=104837473357336081176&rtpof=true&sd=true" target= _blank class="button">See the List of Supports</a></p>
-										<p><em>If any of the links is out of date or if you know of additional services that should be added to this list email us at info@harmony.ca.</em></p>
-										<h3>Self-Care Resources</h3>
 										<p>Engaging in self care is critical to doing any social change work. You need to take care of yourself so you can do this work in a sustainable way. We've curated a variety of tools and activities you
 											can use to plan and implment your own custom self-care practice.</p>
 											<h4>Self-Care Planning Worksheets & Acitvities</h4>
