--- a/resources.html
+++ b/resources.html
@@ -75,11 +75,12 @@
 						</div>
 					</section>
 
-					<!-- Five -->
-						<section id="five" class="wrapper style1 fade-up">
+					<!-- Four -->
+						<section id="four" class="wrapper style1 fade-up">
 							<div class="inner">
 								<div class="content">
 									<div class="inner">
+										<h2>Action Planning Resources</h2>
 										<h4>Looking for more Action Planning resources and support? <a href="clubs.html">Join the Social Changemakers Network!</a></h4>
 											<table>
 												<tr>
