--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">Leadership Series</a></li>
+							<li><a href="#two">Youth Network</a></li>
 							<li><a href="#three">What we do</a></li>
 							<li><a href="#four">Get Updates</a></li>
 						</ul>
